# raupeka-llvm

./: .clang-format  .gitignore  CMakeLists.txt  default.nix  example.rpka  flake.nix  shell.nix
apps/: CMakeLists.txt  main.cpp
include/lib/: ast.hpp  parser.hpp
include/ltl/: result.hpp
raupeka/std/: eff.rpka  io.rpka  prelude.rpka
raupeka/std/data/: function.rpka  functor.rpka  list.rpka
src/: CMakeLists.txt  compiler.hpp  main.cpp  parser.cpp  parser.hpp
